main.tf
terraform {
  required_providers {
    aws = {
        source = "hashicorp/aws"
        version = "~> 4.0"
    }
  }
backend "s3" {
    bucket = "jenkins-project-backendslm"
    key = "backend/tf-backend-jenkins.tfstate"
    region = "us-east-1"
  
  }
}

provider "aws" {
  region = "us-east-1"
}

variable "tags" {
    default = ["postgresql", "nodejs", "react"]

}

resource "aws_instance" "managed_nodes" {
   ami = "ami-0022f774911c1d690"
   count = 3
   instance_type = "t2.micro"
   key_name = "himmel"
   vpc_security_group_ids = [aws_security_group.tf-sec-gr.id]
   iam_instance_profile = "jenkins-project-profile322"
   tags = {
     Name = "ansible_${element(var.tags, count.index)}"
     stack = "ansible_project"
     enviroment = "development"
   }

  
}

resource "aws_security_group" "tf-sec-gr" {
    name = "project208-sec-gr-new"
    tags = {
      Name = "project208-sec-gr"
    }
  

    ingress {
        from_port = 22
        protocol = "tcp"
        to_port = 22
        cidr_blocks = ["0.0.0.0/0"]
    }


    ingress {
        from_port = 5000
        protocol = "tcp"
        to_port = 5000
        cidr_blocks = ["0.0.0.0/0"]
    }


    ingress {
        from_port = 3000
        protocol = "tcp"
        to_port = 3000
        cidr_blocks = ["0.0.0.0/0"]
    }


    ingress {
        from_port = 5432
        protocol = "tcp"
        to_port = 5432
        cidr_blocks = ["0.0.0.0/0"]
    }



    egress {
        from_port = 0
        protocol = -1
        to_port = 0
        cidr_blocks = ["0.0.0.0/0"]
    }

}    

output "react_ip" {
  value =  "http://${aws_instance.managed_nodes[2].public_ip}:3000"
}

output "node_public_ip" {
  value = aws_instance.managed_nodes[1].public_ip
}

output "postgresql_private_ip" {
  value = aws_instance.managed_nodes[0].private_ip
}




# slm
# kdr
#sss
